# AVE

./: .gitignore  DEMO_GUIDE.md  README.md  pyproject.toml  ruff.toml  s_report.json  tmp_cli_debug.py
ave/: cli.py  config.py  context.py  exceptions.py  orchestrator.py
ave/engines/: llm_client.py  rule_engine.py  trail_writer.py
ave/export/: markdown_exporter.py  pdf_exporter.py
ave/models/: finding.py  manifest.py  trail.py
ave/pipeline/: layer1_ingestion.py  layer2_integrity.py  layer3_anomaly.py  layer4_crossverify.py  layer5_synthesis.py
ave/storage/: checkpoint.py  database.py
ave/utils/: hashing.py  logging.py  normalization.py
docs/: AVE_AI_Context_Document.md  AVE_PRD_v1.0.docx  AVE_Task_Graph.json  GITHUB_OPERATING_RULES.md
rules/: default_rules.yaml
rules/examples/: isa_rules.yaml  vas_rules.yaml
tests/: conftest.py
tests/integration/: test_cli_orchestrator_export.py
tests/unit/: test_finding.py  test_hashing.py  test_layer5_synthesis.py  test_logging.py  test_manifest.py  test_markdown_exporter.py  test_normalization.py  test_pdf_exporter.py  test_trail.py
tmp_cli_test/: ave_config.yaml  sample.csv
tmp_cli_test2/: ave_config.yaml
tmp_cli_test2/output/: test-session_report.json  test-session_trail.jsonl
tmp_cli_test3/output/: test-session_report.json  test-session_trail.jsonl
tmp_cli_test4/output/: test-session_report.json  test-session_report.md  test-session_trail.jsonl
