[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ave"
version = "0.1.0"
description = "Autonomous Verification Engine for Auditors"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer==0.12.*",
  "langgraph==0.2.*",
  "pandas==2.*",
  "polars==0.20.*",
  "openpyxl==3.*",
  "chardet==5.*",
  "pyyaml==6.*",
  "pydantic==2.*",
  "httpx==0.27.*",
  "rich==13.*",
]

[project.optional-dependencies]
pdf = ["weasyprint>=62"]
dev = ["ruff==0.4.*", "pytest==8.*", "pytest-cov==5.*"]

[project.scripts]
ave = "ave.cli:app"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["ave*"]
